<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="97dp"
        android:layout_height="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="333dp"
        android:layout_marginTop="-5dp"
        app:srcCompat="@drawable/diet_routine"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/dietRoutine"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="82dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/diet_routine"
        android:textAppearance="@style/diet_routine"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtView1"
        android:layout_width="308dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="408dp"
        android:layout_marginBottom="400dp"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/informed_decision"
        android:textAppearance="@style/informed_decision"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="292dp"
        android:layout_height="293dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="642dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/take_account"
        android:textAppearance="@style/take_account"
        tools:ignore="TextSizeCheck"/>

    <Button
        android:id="@+id/button"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="97dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="851dp"
        android:fillColor="#1E70D1"
        android:text="@string/start_assesment" />


</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>