<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6BCE69"
    tools:context=".Result_page">

    <TextView
        android:id="@+id/your_person"
        android:layout_width="327dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/shojumaru"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/your_person"
        android:textAppearance="@style/your_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/button3"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="287dp"
        android:layout_marginTop="751dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/scada_bold"
        android:text="@string/detailed"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_person"
        app:layout_constraintVertical_bias="1.0" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/breakfast"
            android:layout_width="175dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="22dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="81dp"
            android:fontFamily="@font/shojumaru"
            android:text="@string/breakfast"
            android:textAppearance="@style/breakfast"
            android:gravity="center_horizontal|bottom"
            />
        <TextView
            android:id="@+id/lunch"
            android:layout_width="126dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="22dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="295dp"
            android:fontFamily="@font/shojumaru"
            android:text="@string/lunch"
            android:textAppearance="@style/lunch"
            android:gravity="center_horizontal|bottom"
            />
        <TextView
            android:id="@+id/dinner"
            android:layout_width="114dp"
            android:layout_height="31dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="34dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="495dp"
            android:fontFamily="@font/shojumaru"
            android:text="@string/dinner"
            android:textAppearance="@style/dinner"
            android:gravity="center_horizontal|bottom"
            />
        <TextView
            android:id="@+id/remember_ta"
            android:layout_width="427dp"
            android:layout_height="137dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="780dp"
            android:fontFamily="@font/scada"
            android:gravity="top"
            android:text="@string/remember_ta"
            android:textAppearance="@style/remember_ta"
            android:textSize="16sp"
             />
        <ImageView
            android:id="@+id/glass"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="110dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="850dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/glass" />

        <ImageView
            android:id="@+id/fruits"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="210dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="850dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/fruits" />

        <ImageView
            android:id="@+id/meal_plan"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="324dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-3dp"
            app:srcCompat="@drawable/fats" />

        <ImageView
            android:id="@+id/breakfast_img"
            android:layout_width="70dp"
            android:layout_height="62dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="211dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="82dp"
            app:srcCompat="@drawable/proteins" />

        <ImageView
            android:id="@+id/lunch_img"
            android:layout_width="65dp"
            android:layout_height="69dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="153dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="272dp"
            app:srcCompat="@drawable/carbohydrates" />

        <ImageView
            android:id="@+id/dinner_img"
            android:layout_width="65dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="170dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="476dp"
            app:srcCompat="@drawable/dinner" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>